--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t test-image -f Doxkerfile.dev .
+  - docker build -t test-image -f Dockerfile.dev .
 
 script:
   - docker run test-image npm run test -- --coverage
